--- a/BootstrapDemo.html
+++ b/BootstrapDemo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>John Z. Orr Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -31,7 +31,7 @@
       margin-bottom: 30px;
   }  
   .jumbotron {
-      background-color: #f4511e;
+      background-color: #050E43;
       color: #fff;
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
@@ -120,7 +120,7 @@
   }
   .navbar {
       margin-bottom: 0;
-      background-color: #f4511e;
+      background-color: grey;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -200,14 +200,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage">John Zachary Orr</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#pricing">PRICING</a></li>
+        <li><a href="#services">EDUCATION</a></li>
+        <li><a href="#portfolio">EXPERIENCE</a></li>
+        <li><a href="#pricing">PROJECTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
