--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<style type="text/css">
 		body{
 			background-color: grey;
+			color:blue;
 		}
 		.navbar-inverse .navbar-nav > li > a{
 		 color: #FFF5EE;
